Fixing file conflict with GNOME3 (https://bbs.archlinux.org/viewtopic.php?pid=981719#p981719)

--- a/libmatecomponentui/libmatecomponentui-zip.in
+++ b/libmatecomponentui/libmatecomponentui-zip.in
@@ -23,7 +23,7 @@ fi
 rm $DEVZIP
 zip -r $DEVZIP -@ <<EOF
 bin/matecomponent-browser.exe
-bin/test-moniker.exe
+bin/mate-test-moniker.exe
 include/libmatecomponentui-2.0
 lib/matecomponent-2.0/samples/matecomponent-sample-controls-2.exe
 lib/matecomponent/servers/MateComponent_Sample_Controls.server
