--- a/libmatecomponentui/tests/Makefile.in
+++ b/libmatecomponentui/tests/Makefile.in
@@ -34,13 +34,12 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-noinst_PROGRAMS = test-ui$(EXEEXT) test-ui-auto$(EXEEXT) \
-	test-toolbar$(EXEEXT) test-selector$(EXEEXT) \
-	test-filesel$(EXEEXT) test-focus$(EXEEXT) \
-	test-sensitivity$(EXEEXT) test-reparent$(EXEEXT) \
-	test-events$(EXEEXT)
-bin_PROGRAMS = test-moniker$(EXEEXT)
-TESTS = test-ui-auto$(EXEEXT)
+noinst_PROGRAMS = mate-test-ui$(EXEEXT) mate-test-ui-auto$(EXEEXT) \
+	mate-test-toolbar$(EXEEXT) mate-test-selector$(EXEEXT) \
+	mate-test-filesel$(EXEEXT) mate-test-focus$(EXEEXT) \
+	mate-test-sensitivity$(EXEEXT) mate-test-reparent$(EXEEXT) \
+	mate-test-events$(EXEEXT)
+bin_PROGRAMS = mate-test-moniker$(EXEEXT)
 subdir = tests
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -53,65 +52,65 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS) $(noinst_PROGRAMS)
-test_events_SOURCES = test-events.c
-test_events_OBJECTS = test-events.$(OBJEXT)
-test_events_LDADD = $(LDADD)
+mate_test_events_SOURCES = mate-test-events.c
+mate_test_events_OBJECTS = mate-test-events.$(OBJEXT)
+mate_test_events_LDADD = $(LDADD)
 am__DEPENDENCIES_1 =
-test_events_DEPENDENCIES =  \
+mate_test_events_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_filesel_OBJECTS = test-filesel.$(OBJEXT)
-test_filesel_OBJECTS = $(am_test_filesel_OBJECTS)
-test_filesel_LDADD = $(LDADD)
-test_filesel_DEPENDENCIES =  \
+am_mate_test_filesel_OBJECTS = mate-test-filesel.$(OBJEXT)
+mate_test_filesel_OBJECTS = $(am_mate_test_filesel_OBJECTS)
+mate_test_filesel_LDADD = $(LDADD)
+mate_test_filesel_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_focus_OBJECTS = test-focus.$(OBJEXT)
-test_focus_OBJECTS = $(am_test_focus_OBJECTS)
-test_focus_LDADD = $(LDADD)
-test_focus_DEPENDENCIES =  \
+am_mate_test_focus_OBJECTS = mate-test-focus.$(OBJEXT)
+mate_test_focus_OBJECTS = $(am_mate_test_focus_OBJECTS)
+mate_test_focus_LDADD = $(LDADD)
+mate_test_focus_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_moniker_OBJECTS = test-moniker.$(OBJEXT)
-test_moniker_OBJECTS = $(am_test_moniker_OBJECTS)
-test_moniker_LDADD = $(LDADD)
-test_moniker_DEPENDENCIES =  \
+am_mate_test_moniker_OBJECTS = mate-test-moniker.$(OBJEXT)
+mate_test_moniker_OBJECTS = $(am_mate_test_moniker_OBJECTS)
+mate_test_moniker_LDADD = $(LDADD)
+mate_test_moniker_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_reparent_OBJECTS = test-reparent.$(OBJEXT)
-test_reparent_OBJECTS = $(am_test_reparent_OBJECTS)
-test_reparent_LDADD = $(LDADD)
-test_reparent_DEPENDENCIES =  \
+am_mate_test_reparent_OBJECTS = mate-test-reparent.$(OBJEXT)
+mate_test_reparent_OBJECTS = $(am_mate_test_reparent_OBJECTS)
+mate_test_reparent_LDADD = $(LDADD)
+mate_test_reparent_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_selector_OBJECTS = test-selector.$(OBJEXT)
-test_selector_OBJECTS = $(am_test_selector_OBJECTS)
-test_selector_LDADD = $(LDADD)
-test_selector_DEPENDENCIES =  \
+am_mate_test_selector_OBJECTS = mate-test-selector.$(OBJEXT)
+mate_test_selector_OBJECTS = $(am_mate_test_selector_OBJECTS)
+mate_test_selector_LDADD = $(LDADD)
+mate_test_selector_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_sensitivity_OBJECTS = test-sensitivity.$(OBJEXT)
-test_sensitivity_OBJECTS = $(am_test_sensitivity_OBJECTS)
-test_sensitivity_LDADD = $(LDADD)
-test_sensitivity_DEPENDENCIES =  \
+am_mate_test_sensitivity_OBJECTS = mate-test-sensitivity.$(OBJEXT)
+mate_test_sensitivity_OBJECTS = $(am_mate_test_sensitivity_OBJECTS)
+mate_test_sensitivity_LDADD = $(LDADD)
+mate_test_sensitivity_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_toolbar_OBJECTS = test-toolbar.$(OBJEXT)
-test_toolbar_OBJECTS = $(am_test_toolbar_OBJECTS)
-test_toolbar_LDADD = $(LDADD)
-test_toolbar_DEPENDENCIES =  \
+am_mate_test_toolbar_OBJECTS = mate-test-toolbar.$(OBJEXT)
+mate_test_toolbar_OBJECTS = $(am_mate_test_toolbar_OBJECTS)
+mate_test_toolbar_LDADD = $(LDADD)
+mate_test_toolbar_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_ui_OBJECTS = test-ui.$(OBJEXT)
-test_ui_OBJECTS = $(am_test_ui_OBJECTS)
-test_ui_LDADD = $(LDADD)
-test_ui_DEPENDENCIES =  \
+am_mate_test_ui_OBJECTS = mate-test-ui.$(OBJEXT)
+mate_test_ui_OBJECTS = $(am_mate_test_ui_OBJECTS)
+mate_test_ui_LDADD = $(LDADD)
+mate_test_ui_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
-am_test_ui_auto_OBJECTS = test-ui-auto.$(OBJEXT)
-test_ui_auto_OBJECTS = $(am_test_ui_auto_OBJECTS)
-test_ui_auto_LDADD = $(LDADD)
-test_ui_auto_DEPENDENCIES =  \
+am_mate_test_ui_auto_OBJECTS = mate-test-ui-auto.$(OBJEXT)
+mate_test_ui_auto_OBJECTS = $(am_mate_test_ui_auto_OBJECTS)
+mate_test_ui_auto_LDADD = $(LDADD)
+mate_test_ui_auto_DEPENDENCIES =  \
 	$(top_builddir)/matecomponent/libmatecomponentui-2.la \
 	$(am__DEPENDENCIES_1)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -127,16 +126,16 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = test-events.c $(test_filesel_SOURCES) $(test_focus_SOURCES) \
-	$(test_moniker_SOURCES) $(test_reparent_SOURCES) \
-	$(test_selector_SOURCES) $(test_sensitivity_SOURCES) \
-	$(test_toolbar_SOURCES) $(test_ui_SOURCES) \
-	$(test_ui_auto_SOURCES)
-DIST_SOURCES = test-events.c $(test_filesel_SOURCES) \
-	$(test_focus_SOURCES) $(test_moniker_SOURCES) \
-	$(test_reparent_SOURCES) $(test_selector_SOURCES) \
-	$(test_sensitivity_SOURCES) $(test_toolbar_SOURCES) \
-	$(test_ui_SOURCES) $(test_ui_auto_SOURCES)
+SOURCES = mate-test-events.c $(mate_test_filesel_SOURCES) \
+	$(mate_test_focus_SOURCES) $(mate_test_moniker_SOURCES) \
+	$(mate_test_reparent_SOURCES) $(mate_test_selector_SOURCES) \
+	$(mate_test_sensitivity_SOURCES) $(mate_test_toolbar_SOURCES) \
+	$(mate_test_ui_SOURCES) $(mate_test_ui_auto_SOURCES)
+DIST_SOURCES = mate-test-events.c $(mate_test_filesel_SOURCES) \
+	$(mate_test_focus_SOURCES) $(mate_test_moniker_SOURCES) \
+	$(mate_test_reparent_SOURCES) $(mate_test_selector_SOURCES) \
+	$(mate_test_sensitivity_SOURCES) $(mate_test_toolbar_SOURCES) \
+	$(mate_test_ui_SOURCES) $(mate_test_ui_auto_SOURCES)
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	html-recursive info-recursive install-data-recursive \
 	install-dvi-recursive install-exec-recursive \
@@ -356,15 +355,16 @@ INCLUDES = \
 	$(MATECOMPONENTUI_CFLAGS)
 
 LDADD = $(top_builddir)/matecomponent/libmatecomponentui-2.la $(MATECOMPONENTUI_LIBS)
-test_ui_SOURCES = test-ui.c
-test_ui_auto_SOURCES = test-ui-auto.c
-test_focus_SOURCES = test-focus.c
-test_toolbar_SOURCES = test-toolbar.c
-test_selector_SOURCES = test-selector.c
-test_sensitivity_SOURCES = test-sensitivity.c
-test_reparent_SOURCES = test-reparent.c
-test_moniker_SOURCES = test-moniker.c
-test_filesel_SOURCES = test-filesel.c
+mate_test_ui_SOURCES = mate-test-ui.c
+mate_test_ui_auto_SOURCES = mate-test-ui-auto.c
+mate_test_focus_SOURCES = mate-test-focus.c
+mate_test_toolbar_SOURCES = mate-test-toolbar.c
+mate_test_selector_SOURCES = mate-test-selector.c
+mate_test_sensitivity_SOURCES = mate-test-sensitivity.c
+mate_test_reparent_SOURCES = mate-test-reparent.c
+mate_test_moniker_SOURCES = mate-test-moniker.c
+mate_test_filesel_SOURCES = mate-test-filesel.c
+TESTS = test-ui-auto
 all: all-recursive
 
 .SUFFIXES:
@@ -451,36 +451,36 @@ clean-noinstPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-test-events$(EXEEXT): $(test_events_OBJECTS) $(test_events_DEPENDENCIES) 
-	@rm -f test-events$(EXEEXT)
-	$(LINK) $(test_events_OBJECTS) $(test_events_LDADD) $(LIBS)
-test-filesel$(EXEEXT): $(test_filesel_OBJECTS) $(test_filesel_DEPENDENCIES) 
-	@rm -f test-filesel$(EXEEXT)
-	$(LINK) $(test_filesel_OBJECTS) $(test_filesel_LDADD) $(LIBS)
-test-focus$(EXEEXT): $(test_focus_OBJECTS) $(test_focus_DEPENDENCIES) 
-	@rm -f test-focus$(EXEEXT)
-	$(LINK) $(test_focus_OBJECTS) $(test_focus_LDADD) $(LIBS)
-test-moniker$(EXEEXT): $(test_moniker_OBJECTS) $(test_moniker_DEPENDENCIES) 
-	@rm -f test-moniker$(EXEEXT)
-	$(LINK) $(test_moniker_OBJECTS) $(test_moniker_LDADD) $(LIBS)
-test-reparent$(EXEEXT): $(test_reparent_OBJECTS) $(test_reparent_DEPENDENCIES) 
-	@rm -f test-reparent$(EXEEXT)
-	$(LINK) $(test_reparent_OBJECTS) $(test_reparent_LDADD) $(LIBS)
-test-selector$(EXEEXT): $(test_selector_OBJECTS) $(test_selector_DEPENDENCIES) 
-	@rm -f test-selector$(EXEEXT)
-	$(LINK) $(test_selector_OBJECTS) $(test_selector_LDADD) $(LIBS)
-test-sensitivity$(EXEEXT): $(test_sensitivity_OBJECTS) $(test_sensitivity_DEPENDENCIES) 
-	@rm -f test-sensitivity$(EXEEXT)
-	$(LINK) $(test_sensitivity_OBJECTS) $(test_sensitivity_LDADD) $(LIBS)
-test-toolbar$(EXEEXT): $(test_toolbar_OBJECTS) $(test_toolbar_DEPENDENCIES) 
-	@rm -f test-toolbar$(EXEEXT)
-	$(LINK) $(test_toolbar_OBJECTS) $(test_toolbar_LDADD) $(LIBS)
-test-ui$(EXEEXT): $(test_ui_OBJECTS) $(test_ui_DEPENDENCIES) 
-	@rm -f test-ui$(EXEEXT)
-	$(LINK) $(test_ui_OBJECTS) $(test_ui_LDADD) $(LIBS)
-test-ui-auto$(EXEEXT): $(test_ui_auto_OBJECTS) $(test_ui_auto_DEPENDENCIES) 
-	@rm -f test-ui-auto$(EXEEXT)
-	$(LINK) $(test_ui_auto_OBJECTS) $(test_ui_auto_LDADD) $(LIBS)
+mate-test-events$(EXEEXT): $(mate_test_events_OBJECTS) $(mate_test_events_DEPENDENCIES) 
+	@rm -f mate-test-events$(EXEEXT)
+	$(LINK) $(mate_test_events_OBJECTS) $(mate_test_events_LDADD) $(LIBS)
+mate-test-filesel$(EXEEXT): $(mate_test_filesel_OBJECTS) $(mate_test_filesel_DEPENDENCIES) 
+	@rm -f mate-test-filesel$(EXEEXT)
+	$(LINK) $(mate_test_filesel_OBJECTS) $(mate_test_filesel_LDADD) $(LIBS)
+mate-test-focus$(EXEEXT): $(mate_test_focus_OBJECTS) $(mate_test_focus_DEPENDENCIES) 
+	@rm -f mate-test-focus$(EXEEXT)
+	$(LINK) $(mate_test_focus_OBJECTS) $(mate_test_focus_LDADD) $(LIBS)
+mate-test-moniker$(EXEEXT): $(mate_test_moniker_OBJECTS) $(mate_test_moniker_DEPENDENCIES) 
+	@rm -f mate-test-moniker$(EXEEXT)
+	$(LINK) $(mate_test_moniker_OBJECTS) $(mate_test_moniker_LDADD) $(LIBS)
+mate-test-reparent$(EXEEXT): $(mate_test_reparent_OBJECTS) $(mate_test_reparent_DEPENDENCIES) 
+	@rm -f mate-test-reparent$(EXEEXT)
+	$(LINK) $(mate_test_reparent_OBJECTS) $(mate_test_reparent_LDADD) $(LIBS)
+mate-test-selector$(EXEEXT): $(mate_test_selector_OBJECTS) $(mate_test_selector_DEPENDENCIES) 
+	@rm -f mate-test-selector$(EXEEXT)
+	$(LINK) $(mate_test_selector_OBJECTS) $(mate_test_selector_LDADD) $(LIBS)
+mate-test-sensitivity$(EXEEXT): $(mate_test_sensitivity_OBJECTS) $(mate_test_sensitivity_DEPENDENCIES) 
+	@rm -f mate-test-sensitivity$(EXEEXT)
+	$(LINK) $(mate_test_sensitivity_OBJECTS) $(mate_test_sensitivity_LDADD) $(LIBS)
+mate-test-toolbar$(EXEEXT): $(mate_test_toolbar_OBJECTS) $(mate_test_toolbar_DEPENDENCIES) 
+	@rm -f mate-test-toolbar$(EXEEXT)
+	$(LINK) $(mate_test_toolbar_OBJECTS) $(mate_test_toolbar_LDADD) $(LIBS)
+mate-test-ui$(EXEEXT): $(mate_test_ui_OBJECTS) $(mate_test_ui_DEPENDENCIES) 
+	@rm -f mate-test-ui$(EXEEXT)
+	$(LINK) $(mate_test_ui_OBJECTS) $(mate_test_ui_LDADD) $(LIBS)
+mate-test-ui-auto$(EXEEXT): $(mate_test_ui_auto_OBJECTS) $(mate_test_ui_auto_DEPENDENCIES) 
+	@rm -f mate-test-ui-auto$(EXEEXT)
+	$(LINK) $(mate_test_ui_auto_OBJECTS) $(mate_test_ui_auto_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -488,16 +488,16 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-events.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-filesel.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-focus.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-moniker.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-reparent.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-selector.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-sensitivity.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-toolbar.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-ui-auto.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test-ui.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-events.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-filesel.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-focus.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-moniker.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-reparent.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-selector.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-sensitivity.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-toolbar.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-ui-auto.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mate-test-ui.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
