renaming file to void file conflicts with GNOME3 (https://bbs.archlinux.org/viewtopic.php?pid=981719#p981719)

--- a/mate-keyring/daemon/Makefile.am
+++ b/mate-keyring/daemon/Makefile.am
@@ -55,7 +55,7 @@ mate_keyring_daemon_LDADD = \
 
 service_in_files = \
 	org.mate.keyring.service.in \
-	org.freedesktop.secrets.service.in
+	org.mate-freedesktop.secrets.service.in
 
 servicedir       = $(DBUS_SERVICES_DIR)
 service_DATA     = $(service_in_files:.service.in=.service)
