--- a/mate-keyring/daemon/Makefile.in
+++ b/mate-keyring/daemon/Makefile.in
@@ -42,7 +42,7 @@ DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(srcdir)/mate-keyring-pkcs11.desktop.in.in \
 	$(srcdir)/mate-keyring-secrets.desktop.in.in \
 	$(srcdir)/mate-keyring-ssh.desktop.in.in \
-	$(srcdir)/org.freedesktop.secrets.service.in \
+	$(srcdir)/org.mate-freedesktop.secrets.service.in \
 	$(srcdir)/org.mate.keyring.service.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.in
@@ -53,7 +53,7 @@ CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES = mate-keyring-gpg.desktop.in \
 	mate-keyring-pkcs11.desktop.in mate-keyring-secrets.desktop.in \
 	mate-keyring-ssh.desktop.in org.mate.keyring.service \
-	org.freedesktop.secrets.service
+	org.mate-freedesktop.secrets.service
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(desktopdir)" \
 	"$(DESTDIR)$(servicedir)"
@@ -419,7 +419,7 @@ mate_keyring_daemon_LDADD = \
 
 service_in_files = \
 	org.mate.keyring.service.in \
-	org.freedesktop.secrets.service.in
+	org.mate-freedesktop.secrets.service.in
 
 servicedir = $(DBUS_SERVICES_DIR)
 service_DATA = $(service_in_files:.service.in=.service)
@@ -484,7 +484,7 @@ mate-keyring-ssh.desktop.in: $(top_builddir)/config.status $(srcdir)/mate-keyrin
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 org.mate.keyring.service: $(top_builddir)/config.status $(srcdir)/org.mate.keyring.service.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-org.freedesktop.secrets.service: $(top_builddir)/config.status $(srcdir)/org.freedesktop.secrets.service.in
+org.mate-freedesktop.secrets.service: $(top_builddir)/config.status $(srcdir)/org.mate-freedesktop.secrets.service.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 install-binPROGRAMS: $(bin_PROGRAMS)
 	@$(NORMAL_INSTALL)
