--- a/mate-keyring/configure.in
+++ b/mate-keyring/configure.in
@@ -125,7 +125,7 @@ GLIB_GSETTINGS
 
 # --------------------------------------------------------------------
 # Check for socklen_t
-# 
+#
 
 AC_MSG_CHECKING(whether socklen_t is defined)
 AC_TRY_COMPILE([
@@ -144,7 +144,7 @@ fi
 
 # --------------------------------------------------------------------
 # Check for various credentials.
-# 
+#
 
 AC_MSG_CHECKING(for struct cmsgcred)
 AC_TRY_COMPILE([
@@ -169,7 +169,7 @@ AC_CHECK_FUNCS(getpeerucred, AC_DEFINE(HAVE_GETPEERUCRED,1,[Have getpeerucred]))
 
 # --------------------------------------------------------------------
 # Check for getpeereid
-# 
+#
 
 AC_CHECK_FUNCS(getpeereid, AC_DEFINE(HAVE_GETPEEREID, 1, [Have getpeereid function]))
 
@@ -180,7 +180,7 @@ AC_CHECK_FUNCS(getpeereid, AC_DEFINE(HAVE_GETPEEREID, 1, [Have getpeereid functi
 AC_CHECK_FUNCS(flock, AC_DEFINE(HAVE_FLOCK,1,[Have flock]))
 
 # --------------------------------------------------------------------
-# Check for timegm 
+# Check for timegm
 #
 
 AC_CHECK_FUNCS(timegm, AC_DEFINE(HAVE_TIMEGM,1,[Have timegm]))
@@ -223,7 +223,7 @@ AC_CHECK_FUNCS(mlock)
 
 # --------------------------------------------------------------------
 # socket()
-#	
+#
 
 AC_CHECK_LIB(socket, socket)
 
@@ -242,7 +242,7 @@ fi
 
 # --------------------------------------------------------------------
 # DBus Checks
-# 
+#
 
 DBUS_REQUIRED=1.0
 PKG_CHECK_MODULES([DBUS], dbus-1 >= 1.0)
@@ -275,7 +275,7 @@ AC_SUBST(DBUS_SERVICES_DIR)
 # --------------------------------------------------------------------
 # PAM Checks
 
-AC_ARG_ENABLE(pam, 
+AC_ARG_ENABLE(pam,
 	    AC_HELP_STRING([--disable-pam],
 	    [Build MATE keyring PAM helper]))
 
@@ -308,7 +308,7 @@ AC_SUBST(DL_LIBS)
 # --------------------------------------------------------------------
 # Disable ACL Prompts
 
-AC_ARG_ENABLE(acl-prompts, 
+AC_ARG_ENABLE(acl-prompts,
 	    AC_HELP_STRING([--disable-acl-prompts],
 	    [Disable prompted for user to give access to passwords]))
 
@@ -336,7 +336,7 @@ fi
 # SSH Agent support
 #
 
-AC_ARG_ENABLE([ssh-agent], 
+AC_ARG_ENABLE([ssh-agent],
 		AC_HELP_STRING([--disable-ssh-agent],
 		[Don't include SSH agent in mate-keyring]))
 
@@ -392,14 +392,14 @@ AC_CHECK_FILE(/dev/random, AC_DEFINE(HAVE_DEVRANDOM,1,[Have /dev/random]))
 
 # --------------------------------------------------------------------
 # libgcrypt
-# 
+#
 
 GCRYPT_VERSION=1.2.2
 GCRYPT_LIBVER=1
 
 AM_PATH_LIBGCRYPT($GCRYPT_LIBVER:$GCRYPT_VERSION,,
  	AC_MSG_ERROR([[
-***  
+***
 *** libgcrypt was not found. You may want to get it from
 *** ftp://ftp.gnupg.org/gcrypt/libgcrypt/
 ***
@@ -415,7 +415,7 @@ AC_SUBST([LIBGCRYPT_LIBS])
 
 # -------------------------------------------------------------------
 # libtasn1
-# 
+#
 
 GKR_LIBTASN1_VERSION=0.3.4
 
@@ -434,7 +434,7 @@ fi
 # --------------------------------------------------------------------
 # Debug mode
 
-AC_ARG_ENABLE(debug, 
+AC_ARG_ENABLE(debug,
 	    AC_HELP_STRING([--enable-debug],
 	    [Compile binaries in debug mode]))
 
@@ -445,7 +445,7 @@ if test "$enable_debug" = "yes"; then
   AC_DEFINE_UNQUOTED(_DEBUG, 1, [In debug mode])
   echo "enabling debug compile mode"
   debug_status="yes"
-else 
+else
   dnl AC_DEFINE_UNQUOTED(G_DISABLE_ASSERT, 1, [Disable glib assertions])
   echo "disabling debug compile mode"
   debug_status="no"
@@ -465,8 +465,8 @@ if test "$GCC" = "yes"; then
 	$CFLAGS"
 
 	# Disable -Werror for now, because of issues with
-	# strange gtk-doc programs not building cleanly.  
-	# -Werror \ 
+	# strange gtk-doc programs not building cleanly.
+	# -Werror \
 
 	for option in -Wno-strict-aliasing -Wno-sign-compare; do
 		SAVE_CFLAGS="$CFLAGS"
@@ -490,7 +490,7 @@ fi
 # --------------------------------------------------------------------
 # Tests and Unit Tests
 
-AC_ARG_ENABLE(tests, 
+AC_ARG_ENABLE(tests,
 	    AC_HELP_STRING([--enable-tests],
 	    [Build test tools, unit tests, and -Werror]))
 
@@ -554,7 +554,7 @@ AC_SUBST(GENHTML)
 AC_ARG_ENABLE(valgrind,
 	AC_HELP_STRING([--enable-valgrind],
 	[Run mate-keyring-daemon using valgrind]))
-	
+
 AC_MSG_CHECKING([valgrind])
 valgrind_status="yes"
 
@@ -566,13 +566,13 @@ if test "$enable_valgrind" = "run"; then
 	if test "$VALGRIND" = "no" ; then
 		AC_MSG_ERROR(valgrind tool is not installed)
 	fi
-	
+
 	VALGRIND_ARG="--log-file=/tmp/gkr-valgrind.log.%p"
 	VALGRIND_RUN="$VALGRIND $VALGRIND_ARG "
 
 	AC_DEFINE_UNQUOTED(VALGRIND, "$VALGRIND", [Path to valgrind executable])
 	AC_DEFINE_UNQUOTED(VALGRIND_ARG, "$VALGRIND_ARG", [Valgrind arguments])
-	
+
 	enable_valgrind="yes"
 	valgrind_status="run"
 fi
@@ -589,8 +589,8 @@ if test "$enable_valgrind" = "yes"; then
 	fi
 	AC_DEFINE_UNQUOTED(WITH_VALGRIND, 1, [Run under valgrind])
 	AC_MSG_RESULT(yes)
-	
-	
+
+
 # No valgrind
 else
 	AC_MSG_RESULT(no)
@@ -656,7 +656,7 @@ daemon/mate-keyring-pkcs11.desktop.in
 daemon/mate-keyring-secrets.desktop.in
 daemon/mate-keyring-ssh.desktop.in
 daemon/org.mate.keyring.service
-daemon/org.freedesktop.secrets.service
+daemon/org.mate-freedesktop.secrets.service
 daemon/control/Makefile
 daemon/control/tests/Makefile
 daemon/data/Makefile
@@ -702,7 +702,7 @@ ui/tests/Makefile
 
 # ------------------------------------------------------------------------------
 # Summary
-# 
+#
 
 echo
 echo "OPTIONAL DEPENDENCIES"
