Fixing file conflict with GNOME3 (https://bbs.archlinux.org/viewtopic.php?pid=981719#p981719)

--- a/mate-control-center/help/Makefile.in
+++ b/mate-control-center/help/Makefile.in
@@ -405,7 +405,7 @@ _clean_dsk = $(if $(_DOC_DSK_IN),clean-doc-dsk)
 _clean_lc = $(if $(_DOC_REAL_LINGUAS),clean-doc-lc)
 _clean_dir = $(if $(DOC_MODULE)$(DOC_ID),clean-doc-dir)
 _doc_install_dir = $(if $(DOC_ID),$(DOC_ID),$(DOC_MODULE))
-DOC_MODULE = control-center
+DOC_MODULE = mate-control-center
 DOC_ENTITIES = config-accessibility-keyboard.xml config-background.xml config-behavior.xml config-cds.xml config-default-apps.xml config-file-type.xml config-hints.xml config-html.xml config-kbd.xml config-keybindings.xml config-mouse.xml config-screensaver.xml config-themes.xml
 DOC_INCLUDES = 
 DOC_LINGUAS = ca ca@valencia cs de el en_GB es fr id it ja oc pa pl pt pt_BR ru sv th uk vi zh_CN
