--- a/mate-control-center/help/Makefile.am
+++ b/mate-control-center/help/Makefile.am
@@ -1,9 +1,9 @@
 include $(top_srcdir)/mate-doc-utils.make
 dist-hook: doc-dist-hook
 
-DOC_MODULE = control-center
+DOC_MODULE = mate-control-center
 DOC_ENTITIES = config-accessibility-keyboard.xml config-background.xml config-behavior.xml config-cds.xml config-default-apps.xml config-file-type.xml config-hints.xml config-html.xml config-kbd.xml config-keybindings.xml config-mouse.xml config-screensaver.xml config-themes.xml
-DOC_INCLUDES = 
+DOC_INCLUDES =
 
 DOC_LINGUAS = ca ca@valencia cs de el en_GB es fr id it ja oc pa pl pt pt_BR ru sv th uk vi zh_CN
 
