renaming fish and clock omf to prevent file conflicts with GNOME3 (https://bbs.archlinux.org/viewtopic.php?pid=981719#p981719)

--- a/mate-panel/help/fish/Makefile.in
+++ b/mate-panel/help/fish/Makefile.in
@@ -410,7 +410,7 @@ _clean_dsk = $(if $(_DOC_DSK_IN),clean-doc-dsk)
 _clean_lc = $(if $(_DOC_REAL_LINGUAS),clean-doc-lc)
 _clean_dir = $(if $(DOC_MODULE)$(DOC_ID),clean-doc-dir)
 _doc_install_dir = $(if $(DOC_ID),$(DOC_ID),$(DOC_MODULE))
-DOC_MODULE = fish
+DOC_MODULE = mate-applet-fish
 DOC_INCLUDES = legal.xml
 DOC_LINGUAS = ca cs de el en_GB es eu fi fr it ja ko oc ru sv th uk zh_CN
 all: all-am
