--- a/mate-panel/help/clock/Makefile.in
+++ b/mate-panel/help/clock/Makefile.in
@@ -410,7 +410,7 @@ _clean_dsk = $(if $(_DOC_DSK_IN),clean-doc-dsk)
 _clean_lc = $(if $(_DOC_REAL_LINGUAS),clean-doc-lc)
 _clean_dir = $(if $(DOC_MODULE)$(DOC_ID),clean-doc-dir)
 _doc_install_dir = $(if $(DOC_ID),$(DOC_ID),$(DOC_MODULE))
-DOC_MODULE = clock
+DOC_MODULE = mate-applet-clock
 DOC_INCLUDES = legal.xml
 DOC_LINGUAS = ar ca cs da de el en_GB es eu fi fr it ja ko nl oc pa pt pt_BR ru sr sv th uk zh_CN zh_HK zh_TW
 all: all-am
