--- a/mate-panel/help/fish/Makefile.am
+++ b/mate-panel/help/fish/Makefile.am
@@ -1,7 +1,7 @@
 include $(top_srcdir)/mate-doc-utils.make
 dist-hook: doc-dist-hook
 
-DOC_MODULE = fish
+DOC_MODULE = mate-applet-fish
 DOC_INCLUDES = legal.xml
 
 DOC_LINGUAS = ca cs de el en_GB es eu fi fr it ja ko oc ru sv th uk zh_CN
