renaming session-properties icon to prevent file conflict with GNOME3 (https://bbs.archlinux.org/viewtopic.php?pid=981719#p981719)

--- a/mate-session-manager/data/icons/32x32/Makefile.am
+++ b/mate-session-manager/data/icons/32x32/Makefile.am
@@ -2,8 +2,8 @@ size = 32x32
 
 iconsdir = $(datadir)/icons/hicolor/$(size)/apps
 
-icons_DATA = session-properties.png
-icons_SOURCE = session-properties.svg
+icons_DATA = mate-session-properties.png
+icons_SOURCE = mate-session-properties.svg
 
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
