--- a/mate-session-manager/data/icons/48x48/Makefile.am
+++ b/mate-session-manager/data/icons/48x48/Makefile.am
@@ -2,7 +2,7 @@ size = 48x48
 
 iconsdir = $(datadir)/icons/hicolor/$(size)/apps
 
-icons_DATA = session-properties.png
+icons_DATA = mate-session-properties.png
 
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
