--- a/mate-session-manager/data/session-properties.desktop.in.in
+++ b/mate-session-manager/data/session-properties.desktop.in.in
@@ -2,7 +2,7 @@
 _Name=Startup Applications
 _Comment=Choose what applications to start when you log in
 Exec=mate-session-properties
-Icon=session-properties
+Icon=mate-session-properties
 Terminal=false
 Type=Application
 StartupNotify=true
