--- a/mate-session-manager/data/icons/16x16/Makefile.in
+++ b/mate-session-manager/data/icons/16x16/Makefile.in
@@ -264,8 +264,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 size = 16x16
 iconsdir = $(datadir)/icons/hicolor/$(size)/apps
-icons_DATA = session-properties.png
-icons_SOURCE = session-properties.svg
+icons_DATA = mate-session-properties.png
+icons_SOURCE = mate-session-properties.svg
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 EXTRA_DIST = \
 	$(icons_DATA)	\
