--- a/mate-session-manager/data/icons/scalable/Makefile.in
+++ b/mate-session-manager/data/icons/scalable/Makefile.in
@@ -264,7 +264,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 size = scalable
 iconsdir = $(datadir)/icons/hicolor/$(size)/apps
-icons_DATA = session-properties.svg
+icons_DATA = mate-session-properties.svg
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 EXTRA_DIST = \
 	$(icons_DATA)
