Updating AUR scripts to 2011.08.31

--- a/distro/archlinux/libmatecomponent/PKGBUILD
+++ b/distro/archlinux/libmatecomponent/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmatecomponent
-pkgver=0.0.0
-pkgrel=4
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="A set of language and system independant CORBA interfaces for creating reusable components"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
@@ -10,10 +10,10 @@ groups=('mate')
 options=()
 backup=('etc/matecomponent-activation/matecomponent-activation-config.xml')
 url="http://www.gnome.org"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
 		matecomponent-activation-config.xml)
 install=libmatecomponent.install
-sha256sums=('f773290fa9a8158600c1c683d752e6aef082998ec6bdbba7f60ca01ca72690f2'
+sha256sums=('609187a4d63c68cb0fb447efac35e055ac199f7a62423766d29230bb9c5519b4'
             'c1fc9b102f2635b0d4be39728d19737c1013b61395d0bd0c508fc6ad6b61643e')
 
 build() {
