--- a/distro/archlinux/libmatekeyring/PKGBUILD
+++ b/distro/archlinux/libmatekeyring/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmatekeyring
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="MATE keyring client library"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
@@ -9,8 +9,8 @@ makedepends=('intltool' 'pkgconfig' 'python')
 groups=('mate')
 options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('57add379a324e922358534b5e8143f702813486f80706678ef79ecddc6744ef7')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('279a9b1ddcf178e6a3d562ad9e517177262739b27ab62d9ecab68edf455c2a24')
 
 build() {
 	cd "${srcdir}/${pkgname}"
