--- a/distro/archlinux/mate-bluetooth/PKGBUILD
+++ b/distro/archlinux/mate-bluetooth/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-bluetooth
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="A collection of Bluetooth utilities and modules for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 install=mate-bluetooth.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('9a6241439ad3ba34d8288bb5ae2c2cc61b4ad3530c61fe5f8a6a6085f2d79754')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('8c6d52b103f4903564c614a3640d2fb3a9bb56e29336baba5d14f7dbfaa0a651')
 
 build() {
 	cd "${srcdir}/${pkgname}"
