--- a/distro/archlinux/mate-conf-editor/PKGBUILD
+++ b/distro/archlinux/mate-conf-editor/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-conf-editor
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="A configuration database system editor"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -9,8 +9,8 @@ makedepends=('pkgconfig' 'intltool' 'gtk-doc' 'gobject-introspection')
 groups=('mate-extras')
 install=mate-conf.install
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('990931870be4964a72a43b60046db8849624103c873e7b44c303af0a11d34ea5')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('453ec686dc0da845df7039c2de088ec7eda38de61bfb1e0786e88fab654cfd54')
 
 build() {
 	cd "${srcdir}/${pkgname}"
