--- a/distro/archlinux/mate-document-viewer/PKGBUILD
+++ b/distro/archlinux/mate-document-viewer/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-document-viewer
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Simply a document viewer"
 url="http://projects.gnome.org/evince/"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ optdepends=('texlive-bin: DVI support')
 groups=('mate-extra')
 install=mate-document-viewer.install
 options=('!libtool' '!emptydirs')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('0e5e5eb4652c830f33b620d82ea1c8e47effe84c9f86609de613bee8fb509842')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('4adbcfab482edaa5e873131421ee27cd7d90e2a9745acf64f90de7d8725a4583')
 
 build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
