--- a/distro/archlinux/mate-extract/PKGBUILD
+++ b/distro/archlinux/mate-extract/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Spyros Stathopoulos <foucault.online@gmail.com>
 # Contributor: Alessio Sergi <asergi at archlinux dot us>
 pkgname=mate-extract
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Archive manipulator for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -17,8 +17,8 @@ options=('!libtool' '!emptydirs')
 install=mate-extract.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-md5sums=('a6e050a104271029157b06578e9d1334')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+md5sums=('4f26837dca3752cc9d17cdbcb16c4ed5')
 
 build() {
 	cd "$srcdir/$pkgname"
