--- a/distro/archlinux/mate-file-manager-sendto/PKGBUILD
+++ b/distro/archlinux/mate-file-manager-sendto/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-file-manager-sendto
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Context menu for sending files on MATE File Manager"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 install=mate-file-manager-sendto.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('3c227aaee61f6fed72c54ac2550714fbbc2a57cd6fb7034a338f60111083b9e0')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('e9b586b5864f7cf60626e9ff273655aeb02fcb7ba2a3be5bf8ce05c326b4957e')
 
 build() {
 	cd "${srcdir}/${pkgname}"
