--- a/distro/archlinux/mate-keyring/PKGBUILD
+++ b/distro/archlinux/mate-keyring/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-keyring
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="MATE Password Management daemon"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
@@ -10,8 +10,8 @@ url="http://matsusoft.com.ar/projects"
 groups=('mate')
 options=('!libtool' '!emptydirs')
 install=mate-keyring.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('dfc849c6810736c9f77360e5add93b2ef02e871a515d7ca15289cd5d04a62b66')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('aa98052ef1d562319d8a8414cba47b359960bae9438fe35b14221d5512917452')
 
 build() {
 	cd "${srcdir}/${pkgname}"
