--- a/distro/archlinux/mate-mime-data/PKGBUILD
+++ b/distro/archlinux/mate-mime-data/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-mime-data
-pkgver=0.0.0
+pkgver=2011.08.31
 pkgrel=1
 pkgdesc="The base MIME and Application database for MATE"
 arch=('any')
@@ -8,8 +8,8 @@ depends=('shared-mime-info')
 makedepends=('intltool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('d8f13958b43ad41cfddbcb68c6873cf0e6a991e5c50f96c8b1cc5523d3977833')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('c78d5213408b3d339a956da00d255c2533189214f535d09c83e2187eea265331')
 
 build() {
 	cd "${srcdir}/${pkgname}"
