--- a/distro/archlinux/mate-notification-daemon/PKGBUILD
+++ b/distro/archlinux/mate-notification-daemon/PKGBUILD
@@ -1,17 +1,17 @@
 pkgname=mate-notification-daemon
-pkgver=0.0.0
-pkgrel=7
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Notification daemon for MATE"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
-depends=('libmatenotify')
+depends=('libmatenotify' 'libwnck')
 makedepends=('intltool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 options=('!libtool' '!emptydirs')
 install=mate-notification-daemon.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('2a68af2a7c4f872f8202097f597fa99e41f19e975445e306359039b8c0c575f4')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('61f473628618089d87a01b34934756b5fe0f05c252f8db24d2726595cc30ad59')
 
 build() {
 	cd "${srcdir}/${pkgname}"
