--- a/distro/archlinux/mate-pl-parser/PKGBUILD
+++ b/distro/archlinux/mate-pl-parser/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-pl-parser
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Totem playlist parser library"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -9,8 +9,8 @@ makedepends=('intltool' 'pkgconfig' 'gobject-introspection')
 options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('e3bbf2a4931ea6cda6fbe089eeda3d9f0a1de3a63eb93314c03bab39a935ca45')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('6d0a1171e47e215376cab383cdda4b48bb70b446b63146cda631d7d74f0e9305')
 
 build() {
 	cd "${srcdir}/${pkgname}"
