--- a/distro/archlinux/mate-polkit/PKGBUILD
+++ b/distro/archlinux/mate-polkit/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-polkit
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="PolicyKit integration for the MATE desktop"
 arch=('i686' 'x86_64')
 url="http://www.freedesktop.org/wiki/Software/PolicyKit"
@@ -8,9 +8,9 @@ license=('LGPL')
 depends=('polkit>=0.101' 'gtk2')
 makedepends=('intltool' 'gobject-introspection')
 options=(!libtool)
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
         polkit-mate-authentication-agent-1.desktop)
-sha256sums=('529bc73c79f4b4873388ebfdb97015907e775694bc181682c1f1300e53b8cdb7'
+sha256sums=('14605c45260515e6b394d1cd2b0c5f2b5f8401ee835c71da5248ab42b1570027'
             'f1da2e137d079c9fa7fb15cf219cd18b3c2eafc3767927e28a9de58faac4a937')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
