--- a/distro/archlinux/mate-settings-daemon/PKGBUILD
+++ b/distro/archlinux/mate-settings-daemon/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-settings-daemon
-pkgver=0.0.0
-pkgrel=5
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The MATE Settings daemon"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
 install=mate-settings-daemon.install
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('1d940ab07d3cac5c8a305abc7bd9f6e6d2eda38fe19006a1e7e2846259ebe331')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('1b900e5fda6dac8f54b7fa5bb3a2131011bb1fa01d86447f42193d0e5d151995')
 
 build() {
 	cd "$srcdir/$pkgname"
