--- a/distro/archlinux/mate-terminal/PKGBUILD
+++ b/distro/archlinux/mate-terminal/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-terminal
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The MATE Terminal Emulator"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 install=mate-terminal.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('52c8b82aa649c60124f0a4f5e7d7c4d1919909512bb415454ada4de9785e27a4')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('6c59001c5b8efae486e05ca181c96703d52f894f0cc60ebea3ed035336072e83')
 
 build() {
 	cd "${srcdir}/${pkgname}"
