--- a/distro/archlinux/mate-window-manager/PKGBUILD
+++ b/distro/archlinux/mate-window-manager/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-window-manager
-pkgver=0.0.0
-pkgrel=5
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="A window manager for MATE"
 arch=(i686 x86_64)
 license=('GPL')
@@ -10,9 +10,9 @@ options=('!emptydirs')
 install=mate-window-manager.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
 		metacity-restartstyle.patch)
-sha256sums=('1b7aa5ac2cf58f35bbb7fca5a4bbe952754c6ba6b00b86b7cf92cf20de304ace'
+sha256sums=('af6ac6a42e7e2775af04d3b530ee4080fad1a14b6aed811ca9e336ea5cfb8255'
             'ea2450ca3e4fb59166ec18ff4844cc61cb16865880dc6b125078a3ab47bf2caf')
 
 build() {
