--- a/distro/archlinux/python-corba/PKGBUILD
+++ b/distro/archlinux/python-corba/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=python-corba
-pkgver=0.0
+pkgver=2011.08.31
 pkgrel=1
 pkgdesc="Python binding for Mate CORBA"
 arch=('i686' 'x86_64')
@@ -9,8 +9,8 @@ depends=('python2' 'mate-corba')
 makedepends=('pkgconfig')
 options=('!emptydirs')
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('92d279144ff93e731a34a3ed0ccb23aa9f90f5ce2e1fa68692e9780ab748c319')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('64ea17b72ccb6302587082b750aec4183927ee0523b139d6c021634f6e72949a')
 
 build() {
 	export PYTHON=python2
