--- a/distro/archlinux/libmate/PKGBUILD
+++ b/distro/archlinux/libmate/PKGBUILD
@@ -1,25 +1,31 @@
 pkgname=libmate
-pkgver=0.0.0
-pkgrel=8
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Common libraries for MATE"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=( 'ttf-freefont')
-makedepends=( 'mate-vfs' 'libmatecomponent' 'mate-conf' 'gvfs')
+depends=( 'ttf-freefont' 'mate-conf')
+makedepends=('mate-vfs' 'libmatecomponent' 'gvfs' 'libcanberra')
 options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 install=libmate.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('c2912e2888d55ae9ab47f9d19a2c2c4968ea1007163471ec4ac4e4e8f069f0ff')
+
+# mirrors
+# http://cptl.org/mate/${pkgname}.tar.gz
+# http://hax0r.se/mate/${pkgname}.tar.gz
+# http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
+
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('25334b6977e39ebf3b3c055fb63db07bd49a0766383e16818bd250d71b499ad6')
 
 build() {
 	cd "${srcdir}/${pkgname}"
 	./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
-		--libexecdir=/usr/lib/libmate \
+		--libexecdir=/usr/lib/libmate --enable-canberra \
 		--disable-schemas-install || return 1
-	# --disable-esd   --enable-canberra
+	# --disable-esd
 	make || return 1
 }
 
