--- a/distro/archlinux/libmatecanvas/PKGBUILD
+++ b/distro/archlinux/libmatecanvas/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmatecanvas
-pkgver=0.0.0
-pkgrel=6
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The MATE Canvas library"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -8,8 +8,8 @@ depends=('libglade' 'libart-lgpl')
 makedepends=('pkgconfig' 'intltool')
 groups=('mate')
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('c83bcecb34409b6d733af0f2fdbf2590912bdc7e6112110805d7753650cbb2f0')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('f9032965e1f01dc2e61bef40985550d55cec3854cf3d34928aa1e3a7ac633618')
 
 build() {
 	cd "${srcdir}/${pkgname}"
