--- a/distro/archlinux/libmatecomponentui/PKGBUILD
+++ b/distro/archlinux/libmatecomponentui/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmatecomponentui
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="User Interface library for MateComponent"
 arch=('i686' 'x86_64')
 license=('GPL' 'LGPL')
@@ -9,8 +9,8 @@ makedepends=('intltool' 'pkgconfig')
 groups=('mate')
 options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('4d254640d5d31abe965aa5618dca46205d942c646b2d4bf133965a448c9312e3')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('68fb05801853a13a4335ee74ab15a5bfa1e7586bacd4e73a23510f3f6b7d2e2f')
 
 build() {
 	cd "${srcdir}/${pkgname}"
