--- a/distro/archlinux/libmatekbd/PKGBUILD
+++ b/distro/archlinux/libmatekbd/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmatekbd
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="MATE keyboard library"
 arch=('i686' 'x86_64')
 license=('LGPL')
@@ -10,13 +10,12 @@ groups=('mate')
 url="http://matsusoft.com.ar/projects"
 options=('!emptydirs')
 install=libmatekbd.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('4a47d0b2778b4871e058b7d46606c252a2cbbf048703da448155265de6fa4ba2')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('dc11dad9a1e2e2862ad9fdb03844d8b4f3de3bed32670d5d6a5ff10c3be520bf')
 
 build() {
 	cd "${srcdir}/${pkgname}"
 	./configure --prefix=/usr --sysconfdir=/etc --disable-static || return 1
-	automake || return 1
 	make || return 1
 }
 
