--- a/distro/archlinux/libmatenotify/PKGBUILD
+++ b/distro/archlinux/libmatenotify/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmatenotify
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Desktop notification library"
 arch=('i686' 'x86_64')
 license=('LGPL')
@@ -9,8 +9,8 @@ makedepends=('gtk2' 'gobject-introspection')
 groups=('mate')
 options=()
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('48cabf3e54b8a1a8d9146b8ca96ef40738d4d7d2ac0a58ca778d8e180bd8e58a')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('7ca728029e1e53c9cf4ae4f0dd3acd2ac6c0fc61fb25826c4faf0c2fbe15be6e')
 
 build() {
 	cd "${srcdir}/${pkgname}"
