--- a/distro/archlinux/libmateui/PKGBUILD
+++ b/distro/archlinux/libmateui/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmateui
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="User Interface library for MATE"
 arch=('i686' 'x86_64')
 license=('LGPL')
@@ -9,8 +9,8 @@ makedepends=('intltool' 'pkgconfig')
 groups=('mate')
 #options=('!libtool')
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('b18a4d944f6c42986b213db706400b5f703b314fd93040ede83d0ef88d5e0eec')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('75919a9f588db6b4f2df9ff7f09b339e4319a47c4f4365e24b499735e00e5927')
 
 build() {
 	cd "${srcdir}/${pkgname}"
