--- a/distro/archlinux/libmateweather/PKGBUILD
+++ b/distro/archlinux/libmateweather/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmateweather
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Provides access to weather information from the net"
 arch=('i686' 'x86_64')
 license=('LGPL')
@@ -10,8 +10,8 @@ groups=('mate')
 options=('!emptydirs')
 url="http://www.gnome.org/"
 install=libmateweather.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('e3bfe3e72a173172b0b05fd44175d5631fb49364af4d497c4aada72d3e0d0ca8')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('b444f99953b770d98425aafe6d0633621daba505ccf9ccb3a168b92ce3b71f35')
 
 build() {
 	cd "${srcdir}/${pkgname}"
