--- a/distro/archlinux/mate-applets/PKGBUILD
+++ b/distro/archlinux/mate-applets/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-applets
-pkgver=0.0.0
-pkgrel=5
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="MATE Applets"
 arch=(i686 x86_64)
 license=('GPL')
@@ -10,8 +10,8 @@ groups=('mate-extras')
 options=(!emptydirs)
 url="http://matsusoft.com.ar/projects"
 install=mate-applets.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('ddd7fed9b3b1c947e45f967ccfb56adcd2a104809d6f67aaffe81a23ec075894')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('7a4136444f1beb316536ba0a15635db089c66ac73afca111119a30dc206d85f8')
 
 build() {
 	cd "${srcdir}/${pkgname}"
