--- a/distro/archlinux/mate-backgrounds/PKGBUILD
+++ b/distro/archlinux/mate-backgrounds/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-backgrounds
-pkgver=0.0.0
+pkgver=2011.08.31
 pkgrel=1
 pkgdesc="Background images and data for MATE"
 arch=('any')
@@ -7,8 +7,8 @@ license=('GPL')
 url="http://matsusoft.com.ar/projects"
 makedepends=('intltool')
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('50ec7eb8d26621542d47f51e4b195b3857a34c3a95c114208bb0f35231727981')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('b9e49fba8b311e05410b02ad359ac45a286e6fc1155252ece2a2c0be56dad3a6')
 
 
 build() {
@@ -20,6 +20,6 @@ build() {
 
 package() {
     cd "$srcdir/$pkgname"
-    
+
     make DESTDIR="$pkgdir" install || return 1
 }
