--- a/distro/archlinux/mate-character-map/PKGBUILD
+++ b/distro/archlinux/mate-character-map/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-character-map
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="MATE Unicode Charmap"
 arch=(i686 x86_64)
 license=('GPL')
@@ -12,8 +12,8 @@ groups=('mate-extras')
 install=mate-character-map.install
 conflicts=('gucharmap')
 provides=('gucharmap')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('03b577be797250a3c52485f58ecf70f4c32da7775a28be41426300ef24a5fa6c')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('e881110f3f56b1c237983c7b69384b5d5b91e9e686dd9ff2a80c3d61003dbff5')
 
 build() {
 	cd "${srcdir}/${pkgname}"
