--- a/distro/archlinux/mate-common/PKGBUILD
+++ b/distro/archlinux/mate-common/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-common
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Common development macros for MATE"
 arch=('any')
 license=('GPL')
@@ -8,8 +8,8 @@ depends=()
 makedepends=()
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('56071747bdc08f8aa19a63510034f2ea752153ff1312c24bc724240dc766ac48')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('ce46bb1c651538d78078f33261d789013ed825ef522558aa7596f2d3bc4103ac')
 
 build() {
 	cd "${srcdir}/${pkgname}"
