--- a/distro/archlinux/mate-conf/PKGBUILD
+++ b/distro/archlinux/mate-conf/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-conf
-pkgver=0.0.0
-pkgrel=4
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="A configuration database system"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -9,10 +9,10 @@ makedepends=('pkgconfig' 'intltool' 'gtk-doc' 'gobject-introspection')
 groups=('mate')
 install=mate-conf.install
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
 		mateconf-merge-schema
 		mateconfpkg)
-sha256sums=('f58277bfba61e997a1b4ac042b28057e4dcc2e5dd8dfadf1eb5b82faa2418bef'
+sha256sums=('db6f383016921c87db273a5a7cdc8a9a20415638c62e256ef0465e395101f245'
             '78ccdb9c963400694c944ee193b2fa135dcb39e0d9f1dc393fa659131d591076'
             '2e06a02b5312ee7853be356c1b0131ce6e85fb2949c4aef54c1e795f27fdc1dd')
 
