--- a/distro/archlinux/mate-control-center/PKGBUILD
+++ b/distro/archlinux/mate-control-center/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-control-center
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The Control Center for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 install=mate-control-center.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('fd8ac3a4e168d4ccf7955cecb23f63551f0dd48cd787b635760cd4e404c33957')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('c128f6dd781f6648135de4d1af3cff5156093b3183c8371d767cdadf1c7019cf')
 
 build() {
 	cd "${srcdir}/${pkgname}"
