--- a/distro/archlinux/mate-corba/PKGBUILD
+++ b/distro/archlinux/mate-corba/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-corba
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Thin/fast CORBA ORB"
 arch=('i686' 'x86_64')
 license=('LGPL' 'GPL')
@@ -9,8 +9,8 @@ makedepends=('pkgconfig')
 options=('!makeflags')
 groups=('mate')
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('e105a5cae7605086b6521fabe60b01dcccc14a1db04dac580b65fe18e19afb1f')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('1b6b71e0b4469202e40a6644485725e9388974a0f11e66a3998964ea82820f3c')
 
 build() {
 	cd "${srcdir}/${pkgname}"
