--- a/distro/archlinux/mate-cursor/PKGBUILD
+++ b/distro/archlinux/mate-cursor/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-cursor
-pkgver=0.0.0
+pkgver=2011.08.31
 pkgrel=1
 pkgdesc="Cursor for MATE"
 arch=('any')
@@ -7,8 +7,8 @@ license=('CCPL:by-sa')
 url="http://matsusoft.com.ar/projects"
 makedepends=()
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('bad62f6c63c5610b1389fc336eeddf31292a0034e0c8ae4641a90ab7dd2aa209')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('f56ea445859a3ba15bf6c1c648daecae4b850e463d18380f6a4310fc47e9b6a1')
 
 build() {
 	cd "${srcdir}/${pkgname}"
@@ -19,6 +19,6 @@ build() {
 
 package() {
     cd "$srcdir/$pkgname"
-    
+
     make DESTDIR="$pkgdir" install || return 1
 }
