--- a/distro/archlinux/mate-desktop/PKGBUILD
+++ b/distro/archlinux/mate-desktop/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-desktop
-pkgver=0.0.0
-pkgrel=6
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Library with common API for various MATE modules"
 arch=(i686 x86_64)
 license=(GPL LGPL)
@@ -9,8 +9,8 @@ makedepends=(mate-doc-utils intltool)
 options=(!emptydirs)
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('e9dcd4ae076360712e1e4df8c3de9de9642bf65d4b0b289cdb013a19b6240139')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('31c101ee91679ea7778306cc44c1d4049e158ef21ff868122791a57cfd9dc687')
 
 build() {
 	cd "$srcdir/$pkgname"
