--- a/distro/archlinux/mate-devel-docs/PKGBUILD
+++ b/distro/archlinux/mate-devel-docs/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-devel-docs
-pkgver=0.0.0
+pkgver=2011.08.31
 pkgrel=1
 pkgdesc="Developer documentation for MATE"
 arch=('any')
@@ -7,8 +7,8 @@ license=('GPL' 'LGPL')
 depends=('libxslt' 'python2' 'docbook-xml' 'rarian')
 makedepends=('pkgconfig' 'intltool')
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('b67b2795025e028d12c07e9a204b0061377049cc923c316e1fea30d81f8518c2')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('484d28be97e17d8f8eca0c11d2817f3ff7dfcb29a17f2f149c5fc2ed388b34f3')
 groups=('mate')
 
 build() {
