--- a/distro/archlinux/mate-dialogs/PKGBUILD
+++ b/distro/archlinux/mate-dialogs/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-dialogs
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Display graphical dialog boxes from shell scripts"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -10,8 +10,8 @@ url="http://matsusoft.com.ar/projects"
 groups=('mate')
 provides=('zenity')
 conflicts=('zenity')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('588ef2e1f9dac5c57618ed8dad5cfe6635a5915dc14f3e463c88c4373d47c68d')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('2853e491701a6e09a0378a32fff954bce3ffd776340d2c3e3790d406cf0a347a')
 
 build() {
 	cd "${srcdir}/${pkgname}"
