--- a/distro/archlinux/mate-display-manager/PKGBUILD
+++ b/distro/archlinux/mate-display-manager/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-display-manager
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The MATE Display Manager"
 arch=(i686 x86_64)
 license=('GPL')
@@ -12,11 +12,11 @@ url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
 provides=('gdm')
 conflicts=('gdm')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
 		gdm
 		gdm.pam
 		gdm-autologin.pam)
-sha256sums=('78404db43d73d7e7711f7a43571845eaf27362111000df25b53941dfbf8ad6f9'
+sha256sums=('0f19968d9d0350e682eb7ca4f618a3bfe13a950c30e345092ef60f24c1b19b6a'
             '272c08d8e8b50bf424d0705ac864d4c18c47ec4f6893b1af732c2efbc86c9550'
             'f1dfa4d88288d4b0a631a68a51b46c2da537bee8fe5a99f9f288c8ff75a50b19'
             '3daff680ff6b7ea56f84f40843e46e72477c81e9e405028203c942af04d07ae5')
