--- a/distro/archlinux/mate-doc-utils/PKGBUILD
+++ b/distro/archlinux/mate-doc-utils/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-doc-utils
-pkgver=0.0.0
-pkgrel=5
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Documentation utilities for MATE"
 arch=('any')
 license=('GPL' 'LGPL')
@@ -8,8 +8,8 @@ depends=('libxslt' 'python2' 'docbook-xml' 'rarian' 'gnome-doc-utils')
 makedepends=('pkgconfig' 'intltool')
 #conflicts=('gnome-doc-utils')
 url="http://matsusoft.com.ar/projects"
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('dc5fc9d4573e47c94c6bc042ed74e362248f0511fe45fa50e03e59ac9ac8e260')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('9fd377f232acb35eac5de63f476122e14ff5710a2dd10a7f685888a3c8bd85cf')
 groups=('mate')
 
 build() {
