--- a/distro/archlinux/mate-file-manager-open-terminal/PKGBUILD
+++ b/distro/archlinux/mate-file-manager-open-terminal/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-file-manager-open-terminal
-pkgver=0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="An extension for opening terminals in arbitrary local paths"
 arch=('i686' 'x86_64')
 url="http://manny.cluecoder.org/packages/nautilus-open-terminal"
@@ -10,8 +10,8 @@ makedepends=('pkgconfig' 'intltool')
 install=mate-file-manager-open-terminal.install
 options=('!libtool')
 group=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('3041ce4d09d35a88cb3e744e26eb06f5ed09521b5d04619ac35a357d8b41f30d')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('ca8006db87798d8720d7e9aa494ef380bf76d1f5acb204ff4f2c2b02785ecb51')
 
 build() {
 	cd "$srcdir/$pkgname"
