--- a/distro/archlinux/mate-file-manager/PKGBUILD
+++ b/distro/archlinux/mate-file-manager/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-file-manager
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The MATE shell and file manager"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -9,8 +9,8 @@ makedepends=('pkgconfig' 'intltool')
 url="http://matsusoft.com.ar/projects"
 options=('!libtool' '!emptydirs')
 install=mate-file-manager.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('96054f023ab2911495ba8c06b967dbe986081e25b24d3e82b7d9e8b6f6dcdd02')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('c407ce9787ddddf9b8f438bdd869f340dcc87a60ddb19558db587e01decd41fa')
 groups=('mate')
 
 build() {
