--- a/distro/archlinux/mate-icon-theme/PKGBUILD
+++ b/distro/archlinux/mate-icon-theme/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-icon-theme
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="MATE icon theme"
 arch=('any')
 license=('GPL')
@@ -8,8 +8,8 @@ depends=('hicolor-icon-theme' 'icon-naming-utils' 'gtk-update-icon-cache')
 makedepends=('intltool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('fbd10913ea6566acf696a3dd4d81b115ca5e754d750ea737d2a2f0d3bd00b75f')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('171f81dfb13c7949ec30c7b7cbcf30c6f6428ebc513ab26f73a51385905765f2')
 install=mate-icon-theme.install
 
 build() {
