--- a/distro/archlinux/mate-image-viewer/PKGBUILD
+++ b/distro/archlinux/mate-image-viewer/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-image-viewer
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="An image viewing and cataloging program for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -11,8 +11,8 @@ conflicts=('eog')
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
 install=mate-image-viewer.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('46130b2508f495d2ef1241e9819eb7db5b94b00b1c2341aa04bfe1292f14e9c3')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('5cb6b424af115645061850d2c730744475ef979da36871e144291ddd4cae99bc')
 
 build() {
 	cd "${srcdir}/${pkgname}"
