--- a/distro/archlinux/mate-menus/PKGBUILD
+++ b/distro/archlinux/mate-menus/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-menus
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="MATE menu specifications"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -9,9 +9,9 @@ makedepends=('intltool' 'gobject-introspection')
 options=('!libtool')
 provides=('gnome-menus')
 conflicts=('gnome-menus')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
         menus.patch)
-sha256sums=('a004cc3a39d0d8065a783e40bf7917db8d6d056a94f02d452e095ba1ebc6fc96'
+sha256sums=('45d34be88b4d4f7e0fdd0d8a667c012b33067e1ee6527488d13fc7ff2ee57435'
             'fcb4ec32349e3788bb19149c51b773d2a82f93618ab7a22ff6896d166ae2cab9')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
