--- a/distro/archlinux/mate-panel/PKGBUILD
+++ b/distro/archlinux/mate-panel/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-panel
-pkgver=0.0.0
-pkgrel=6
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The MATE Panel"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -8,8 +8,8 @@ depends=('libwnck' 'mate-conf' 'mate-menus' 'mate-desktop' 'librsvg' 'hicolor-ic
 makedepends=('mate-doc-utils' 'pkgconfig' 'intltool' 'networkmanager')
 options=('!emptydirs')
 install=mate-panel.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('ee69a109c63d928bb32c710905ffa5572f29dda85f3f6781bd7d0909a67702bc')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('c7b74561fd0f019995939b8ee9c23557702b9ade7b48505af86effe28a466268')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 
