--- a/distro/archlinux/mate-power-manager/PKGBUILD
+++ b/distro/archlinux/mate-power-manager/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-power-manager
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Session daemon that makes it easy to manage your laptop or desktop system for Mate Desktop"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 install=mate-power-manager.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('b79ea241e75f3334d97a77dec0a3dc7dc154da429840ac7bae7c66c0f3991b51')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('2a48bf5930740a7dfa3a380a215b55ef2975256f75ada45915c1f210641ff3bb')
 
 build() {
 	cd "${srcdir}/${pkgname}"
