--- a/distro/archlinux/mate-session-manager/PKGBUILD
+++ b/distro/archlinux/mate-session-manager/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-session-manager
-pkgver=0.0.0
-pkgrel=4
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The MATE Session Handler"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 install=mate-session-manager.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('bf6c239b87c0714b946d210dd9fbe6d42debe9ef430aabb8631e2c0f86b4cfd4')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('64f0fa79eabea2b44f83530ca631787d1013cd3f84dd2dca4e6da649d791489b')
 
 build() {
 	cd "${srcdir}/${pkgname}"
