--- a/distro/archlinux/mate-text-editor/PKGBUILD
+++ b/distro/archlinux/mate-text-editor/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: neocrust
 
 pkgname=mate-text-editor
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="An powerfull text editor for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -13,8 +13,8 @@ conflicts=('gedit')
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
 install=mate-text-editor.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('1bf55b68894bbb944769f6a9371d8675fb42f7cbc02947ba7a22321022ec5ae6')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('181779b25161a030f6ed25bce1af160d1d82bbbda43f26ab2329219e3e2539ec')
 
 build() {
 	cd "${srcdir}/${pkgname}"
