--- a/distro/archlinux/mate-themes/PKGBUILD
+++ b/distro/archlinux/mate-themes/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-themes
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="Default themes for the MATE desktop"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -10,8 +10,8 @@ replaces=('gnome-themes')
 conflicts=('gnome-themes')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('bb9293a79a1223a83512b34fd571264d9aa4b455a6cd044d5d347c57ced70b7d')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('a3349dee4f2e1f08ba7e5ac32bf8fb3684b7b707a5d1b9399ad1c1fbf39537a7')
 
 build() {
 	cd "${srcdir}/${pkgname}"
