--- a/distro/archlinux/mate-user-docs/PKGBUILD
+++ b/distro/archlinux/mate-user-docs/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-user-docs
-pkgver=0.0.0
-pkgrel=2
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="User documentation for MATE"
 arch=('any')
 license=('FDL')
@@ -8,8 +8,8 @@ depends=()
 makedepends=('mate-doc-utils')
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('92314ac57e4e5813f4f0885dcbec3ea6dbd5028707f922bbea7cf5a8f6118256')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('8a34bb2bfaacd1870ffb2b03991251da541cf16de2f047624a8b31bb3fd81e5c')
 
 build() {
 	cd "${srcdir}/${pkgname}"
