--- a/distro/archlinux/mate-vfs/PKGBUILD
+++ b/distro/archlinux/mate-vfs/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-vfs
-pkgver=0.0.0
-pkgrel=5
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="The MATE Virtual File System"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 install=mate-vfs.install
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('49b930c6b6c1b29482dd766999054ead715cc809ebb69c9b63cc865d7027d818')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('bdf15c16df4f8431e255748600ce872e829c1e21970ccc51b280d2404e31d4da')
 
 build() {
 	cd "${srcdir}/${pkgname}"
