--- a/distro/archlinux/mate-video-player/PKGBUILD
+++ b/distro/archlinux/mate-video-player/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=mate-video-player
-pkgver=0.0.0
-pkgrel=3
+pkgver=2011.08.31
+pkgrel=1
 pkgdesc="A MATE integrated movie player based on Gstreamer."
 arch=(i686 x86_64)
 license=('GPL')
@@ -10,8 +10,8 @@ options=('!emptydirs')
 install=mate-video-player.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('beb47137c3495031a9fb25a42a3dfd9bc3f937946f3ab3d653c1938a7db597bf')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('8a65374ad544ad0d65e42eaf16ed092d00d892b438e30558d18c9e952b667aea')
 
 build() {
 	cd "${srcdir}/${pkgname}"
