--- a/distro/archlinux/python-caja-terminal/PKGBUILD
+++ b/distro/archlinux/python-caja-terminal/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=python-caja-terminal
-pkgver=0.0
+pkgver=2011.08.31
 pkgrel=1
 pkgdesc="An integrated terminal for Mate File Manager"
 arch=('any')
@@ -7,8 +7,8 @@ url="http://software.flogisoft.com/nautilus-terminal/"
 license=('GPL')
 groups=('mate-extras')
 depends=('python-caja' 'vte' 'pyxdg')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('36224a8d21089650ea051e8215b30eb0ec090c5b6d08d85e5bbfd9d84bca2832')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('03c0217cae536204c4d51a001c077e4063ab8da7c17b9137befab4130a44c53a')
 
 build() {
 	cd "$srcdir/$pkgname"
