--- a/distro/archlinux/python-caja/PKGBUILD
+++ b/distro/archlinux/python-caja/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=python-caja
-pkgver=0.0
+pkgver=2011.08.31
 pkgrel=1
 pkgdesc="Python binding for Cahja components"
 arch=('i686' 'x86_64')
@@ -9,8 +9,8 @@ groups=('mate-extras')
 makedepends=('pkgconfig' 'python-mate' )
 depends=('mate-file-manager' 'pygtk')
 options=('!libtool' '!emptydirs')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('bb93232c12a48f084f0b32ea58b8962f444f030fd2f4ce88042399b0a6ee7f1f')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('4c698543bebf1efd8ab097e47dd4f9ec72e492d3f482748086b271bfc1e36676')
 
 build() {
 	export PYTHON=python2
