--- a/distro/archlinux/python-mate/PKGBUILD
+++ b/distro/archlinux/python-mate/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=python-mate
-pkgver=0.0
+pkgver=2011.08.31
 pkgrel=1
 pkgdesc="Python binding for Mate"
 arch=('i686' 'x86_64')
@@ -9,8 +9,8 @@ depends=('python2' 'python-corba' 'libmate' 'libmateui' 'libmatecanvas' 'libmate
 makedepends=('pkgconfig')
 options=('!emptydirs')
 groups=('mate-extras')
-source=(http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz)
-sha256sums=('34b25d2908b5f8131a45d86114b7eca4f0c15361473908c8a7c3122120d3c602')
+source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
+sha256sums=('54aee0eb6dea1695762310073a9f64d683ffd211f2be0569e79cb982e000ef58')
 
 build() {
 	export PYTHON=python2
