AUR: automake cannot open < mate-docs-utils.make, No such file or directory (https://aur.archlinux.org/packages.php?ID=52018)

--- a/distro/archlinux/mate-document-viewer/PKGBUILD
+++ b/distro/archlinux/mate-document-viewer/PKGBUILD
@@ -20,7 +20,7 @@ sha256sums=('4adbcfab482edaa5e873131421ee27cd7d90e2a9745acf64f90de7d8725a4583')
 build() {
 	cd "${srcdir}/${pkgname}"
 
-
+	mate-doc-prepare --copy
 	autoreconf -fi
 
 	./configure --prefix=/usr   --sysconfdir=/etc \
