Appling patch http://fpaste.org/PBkK/

--- a/mate-corba/matecorba2-config.in
+++ b/mate-corba/matecorba2-config.in
@@ -1,11 +1,12 @@
 #! /bin/sh
 
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-exec_prefix_set=no
-includedir=@includedir@
-libdir=@libdir@
 [ -z "$PKG_CONFIG" ] && PKG_CONFIG="pkg-config"
+
+prefix=`${PKG_CONFIG} --variable prefix ORBit-2.0`
+exec_prefix=`${PKG_CONFIG} --variable exec_prefix ORBit-2.0`
+exec_prefix_set=no
+includedir=`${PKG_CONFIG} --variable includedir ORBit-2.0`
+libdir=`${PKG_CONFIG} --variable libdir ORBit-2.0`
 
 usage()
 {
@@ -22,9 +23,9 @@ Known values for OPTION are:
   --version		output version information
 
   --use-service=SRVC    the service SRVC will be used
-  
+
 Known values for SRVC are:
-    
+
     name                module CosNaming, interfaces LNameComponent, LName
 
 Known values for TARGET are:
