AUR: syntax fix and revition number increase

--- a/distro/archlinux/mate-desktop/PKGBUILD
+++ b/distro/archlinux/mate-desktop/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="Library with common API for various MATE modules"
 arch=(i686 x86_64)
 license=(GPL LGPL)
 depends=('libunique' 'libmatenotify' 'hicolor-icon-theme' 'gvfs-obexftp' 'obexd-client' 'mate-conf')
-makedepends=(mate-doc-utils intltool)
+makedepends=('mate-doc-utils' 'intltool')
 options=(!emptydirs)
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
